A bunch of fixes from Priscilla's comments.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@225 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -5,18 +5,18 @@
 {$LastChangedBy$}
 \svnid{$Id: $}
 
-\section{Specific models involving $b-$ quarks in the final state}
+\section{Specific models involving $b$-quarks in the final state}
 
 In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in the pMSSM), 
 spin-0 mediators might couple more strongly to down generation quarks.
  This assumption motivates the study of final states involving $b$-quarks 
  as a complementary search to the $t\bar
-t$+DM models presented in the previous section, to directly probe the $b-$ quark coupling. 
+t$+DM models presented in the previous section, to directly probe the $b$-quark coupling. 
 An example of such a model can be found in Ref.~\cite{Buckley:2014fba}
 
 As in the $t\bar t$ case, detailed studies were performed, analyzing 
 these models and their key features. It was found that they show the
-same weak dependence of the kinematics of the event on width
+same weak dependence of the kinematics of the event on mediator width
 variation, except in few corner cases. In addition, it was found that
 the same benchmark parameters of the $t\bar t$ case could be chosen.
 
