--- a/doc/tex/DMHFModels.tex
+++ b/doc/tex/DMHFModels.tex
@@ -8,7 +8,7 @@ assumptions to enhance the production of these specific final states, but they a
 unique search signature. Presentation of model-independent results is strongly encouraged to allow for further 
 reinterpretation that relaxes some of the assumptions in these models.  
 
-\section{\texorpdfstring{$t \bar{t}$ and $b \bar{b}$+MET models}{ttbar/bbar+MET models}}
+\section{\texorpdfstring{$t \bar{t}$ and $b \bar{b}$+MET models}{ttbar/bbbar+MET models}}
 
 \input{tex/TTBar.tex}
 
