--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -47,12 +47,12 @@ described in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings},
 we consider a Higgs portal with a scalar mediator. Models of this kind
 are among the most concise versions of simplified models that produce 
 couplings of Dark Matter to pairs of gauge-bosons.  Scalar fields may couple directly to pairs of electroweak gauge bosons, 
-but must carry part of the electroweak vev.  One may thus consider a simple model where Dark Matter couples to a a scalar 
+but must carry part of the electroweak vacuum expectation value.  One may thus consider a simple model where Dark Matter couples to a a scalar 
 singlet mediator, which mixes with the fields in the Higgs sector.
 \begin{equation}
 L\subset m_s S^2 + \lambda S^2H^2 +\lambda^{'} S H^2 + y S \chiDM \overline{\chiDM}
 \end{equation}
-Where H is a field in the Higgs sector that contains part of the electroweak vev, 
+Where H is a field in the Higgs sector that contains part of the electroweak vacuum expectation value, 
 S is a heavy scalar singlet and $\chiDM$ is a Dark Matter field. 
 There is then an S channel diagram where DM pairs couple to the singlet field S, 
 which then mixes with a Higgs-sector field, and couples to W and Z bosons. 
