--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -202,7 +202,7 @@ radiation of a jet (or another EW gauge boson) in the initial state.
 The second term describes the interaction between the \Zprime and the SM Higgs boson,
 via the coupling $g_{h \Zprime \Zprime} = \frac{m_{\Zprime}2 sin\theta}{v_B}$, where
 $sin\theta$ is the mixing angle between the SM Higgs and the baryonic Higgs $h_B$, and $v_B$ is the
-Baryonic Higgs vev. 
+Baryonic Higgs vacuum expectation value. 
 
 %TODO: 
 %	1- Mention sensitivity difference wrt monojet? 
@@ -509,7 +509,7 @@ and still give a potentially observable Higgs+\MET signal.
  -{\cal L} \supset  y_u Q \tilde \Phi_u \bar u + y_d Q \Phi_d \bar d + y_e L \Phi_d \bar e  + {\rm h.c.}
  \end{equation}
  
- After electroweak symmetry breaking, the Higgs doublets attain vevs $v_u$ and $v_d$, and in unitary gauge the doublets are parametrized as
+ After electroweak symmetry breaking, the Higgs doublets attain vacuum expectation values $v_u$ and $v_d$, and in unitary gauge the doublets are parametrized as
  \begin{align}
  \Phi_d &= \frac{1}{\sqrt{2}}
  \begin{pmatrix}
@@ -533,7 +533,7 @@ limit where $h$ has SM-like couplings to fermions and
 gauge bosons as per Ref.~\cite{Craig:2013hca}, and $\tan{\beta} \ge 0.3$ 
 as implied from the perturbativity of the top Yukawa coupling. 
   %For the $ b \bar{b}$ decay channel, the signature of the signal we are searching for is a pair of boosted WIMPs recoiling against two $b$ jets. 
-The Higgs vevs lead to $Z-\Zprime$ mass mixing, with a mixing parameter given by 
+The Higgs vacuum expectation values lead to $Z-\Zprime$ mass mixing, with a mixing parameter given by 
  \begin{align}
  \epsilon & \equiv \frac{1}{M_{\Zprime}^2 - M_Z^2} \frac{g g_z}{2 \cos{\theta_w}} ( z_d v_d^2 + z_u v_u^2) \nonumber \\
  & =  \frac{(M_Z^0)^2}{M_{\Zprime}^2 - M_Z^2} \frac{2 g_z \cos \theta_w}{g}  z_u \sin^2 \beta.
