--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -11,7 +11,7 @@ Assuming dark matter is a fermion $\chiDM$ who's interactions with the Standard 
 {\cal L}_{{\rm fermion},\phi} & = & {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu \phi \right|^2+\frac{1}{2}m_\phi^2 \phi^2 + g_\chiDM \phi \bar{\chiDM}\chiDM+ \sum_f \frac{g_v y_f}{\sqrt{2}} \phi \bar{f} f, \label{eq:scalarlag} \\
 {\cal L}_{{\rm fermion},a} & = & {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu a \right|^2+\frac{1}{2}m_a^2 a^2 + i g_\chiDM a \bar{\chiDM}\gamma^5 \chiDM+ \sum_f i \frac{g_v y_f}{\sqrt{2}} a \bar{f}\gamma^5 f. \label{eq:pseudoscalarlag}
 \end{eqnarray}
-Here, we have made several simplifying assumptions. First, we assume that the coupling to visible-sector fermions is MFV, and proportional to a single universal coupling $g_v$. Thus, the coupling of $\phi$ or $a$ to any flavor of fermion $f$ is set by $g_v \times y_f$, where $y_f$ is the Standard Model yukawa $y_f = \sqrt{2}m_f/v$.\footnote{This normalization for the yukawas assumes $v = 246$~GeV and $y_t \sim 1$.} It is not hard to imagine scenarios that still possess the positive qualities of the MFV assumption but have non-universal $g_v$; for example, couplings only to up-type quarks, or only to leptons. We do not single out any of these options here in our benchmark models, but remind the reader that it is desirable to have experimental constraints sensitive to couplings to different flavors of fermions. Similarly, since there is no ``MFV'' motivation for the structure of dark matter-mediator couplings in the dark sector, and it is of course not known whether the dark matter mass $\mDM$ is set by only by the Higgs vev $v$ (indeed this would seem to be somewhat unlikely, given the direct detection constraints on dark matter as containing a pure $SU(2)_L$ doublet) we parametrize the dark matter-mediator coupling by $g_\chiDM$, rather than by some number times a yukawa coupling proportional to $\mDM$. 
+Here, we have made several simplifying assumptions. First, we assume that the coupling to visible-sector fermions is MFV, and proportional to a single universal coupling $g_v$. Thus, the coupling of $\phi$ or $a$ to any flavor of fermion $f$ is set by $g_v \times y_f$, where $y_f$ is the Standard Model yukawa $y_f = \sqrt{2}m_f/v$.\footnote{This normalization for the yukawas assumes $v = 246$~GeV and $y_t \sim 1$.} It is not hard to imagine scenarios that still possess the positive qualities of the MFV assumption but have non-universal $g_v$; for example, couplings only to up-type quarks, or only to leptons. We do not single out any of these options here in our benchmark models, but remind the reader that it is desirable to have experimental constraints sensitive to couplings to different flavors of fermions. Similarly, since there is no ``MFV'' motivation for the structure of dark matter-mediator couplings in the dark sector, and it is of course not known whether the dark matter mass $\mDM$ is set by only by the Higgs vacuum expectation value $v$ (indeed this would seem to be somewhat unlikely, given the direct detection constraints on dark matter as containing a pure $SU(2)_L$ doublet) we parametrize the dark matter-mediator coupling by $g_\chiDM$, rather than by some number times a yukawa coupling proportional to $\mDM$. 
 
 Finally, the most general Lagrangians including new scalars or pseudoscalars should have a potential $V$ containing possible interactions with the Higgs $h$. As stated in the introduction, we choose to take a more minimal set of possible interactions, and leave discussions of the Higgs interactions to the sections on the Higgs Portal.
 
