--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -59,6 +59,30 @@ In light of these considerations, we recommend to produce the following benchmar
   \item $MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data;
 \end{itemize}
 
+This scan of the parameter space is summarized in Table~\ref{tab:monobscan}.
+
+\begin{table}[!h]
+\centering
+\resizebox{\textwidth}{!}{
+\begin{tabular}{| l |r r r r r r r r r r r r r r|}
+\hline
+\multicolumn{1}{|c|}{\mDM (\gev)} & \multicolumn{14}{c|}{\mmed (\gev)} \\
+\hline
+  10 &   10 &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+  50 &      &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+ 100 &      &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+ 200 &      &      &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+ 300 &      &      &      &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+ 400 &      &      &      &      &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+ 500 &      &      &      &      &      &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+\hline
+\end{tabular}
+}
+\caption{Simplified model benchmarks for the considered mono-$b$ model, as described in the text.}
+\label{tab:monobscan}
+\end{table}
+
+
 Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}.
 %The increase in the center of mass energy from 8 to 13 TeV leads to a cross-section increase that is a function of $MPhi$, 
 %with a smaller dependency for \mDM. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to 8 TeV searches~\cite{Aad:2014vea}.
