--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -8,7 +8,7 @@
 As described in Section~\ref{sec:monojet_scalar}, a model with a scalar/pseudoscalar particle 
 mediating the DM-SM interactions is one of the simplest UV completions of our EFT models.  
 With the MFV assumption, the top quark plays a primary role in the phenomenology: The model predicts not only
- the monojet process described earlier, but also production of dark matter
+ the monojet process described in Chapter~\ref{subsec:MonojetLikeModels}, but also production of dark matter
 in association with top pairs, as illustrated in Fig.~\ref{fig:TTbarPhi}. 
 Dedicated searches including jets from heavy flavor quarks in the final state
 can be designed for this production mechanism. 
@@ -101,7 +101,7 @@ An example of such a model can be found in Ref.~\cite{Buckley:2014fba}
 \subsection{Parameter scan}
 
 As discussed in Sec.~\ref{subsec:MonojetLikeModels}, the MFV and universal coupling assumptions for spin-$0$ 
-mediators leads to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.
+mediators lead to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.
 
 The parameter scan for the dedicated $t\bar{t}$+\MET{} searches has been studied in detail to target the production 
 mechanism of DM associated to heavy flavor quarks, still sharing many details of the scan for the scalar model with a gluon radiation 
@@ -110,7 +110,7 @@ parameter space are sufficiently represented. Detailed studies were performed to
 $m_{\phi,a}$, $\gDM$, $\gq$ (and $\Gamma_{\phi,a}$) parameter space that differ significantly from each other 
 in terms of expected detector acceptance. Because missing transverse momentum is the key observable for searches, the 
 mediator $p_{T}$ spectra is taken to represent the main kinematics of a model. Another consideration in determining the set 
-of benchmarks is to focus on the phase space where we expect the searches to be sensitive during the 2015 LHC run. 
+of benchmarks is to focus on the parameter space where we expect the searches to be sensitive during the 2015 LHC run. 
 Based on a projected integrated luminosity of $30\,{\rm fb}^{-1}$ expected for 2015, we disregard model points with a 
 cross section times branching ratio smaller than $0.1\,{\rm fb}$, corresponding to a minimum of one expected event 
 assuming a conservative 0.1\% signal efficiency. 
@@ -223,8 +223,8 @@ While the simple scaling function
 \times {\gDM'\over \gDM}^2
 \times {\Gamma\over\Gamma'}
 \end{equation}
-is sufficient for a limited range of coupling values (see Fig.~\ref{fig:xsec_scaling} for example). 
-This scaling is only approximate (up to 20\%)  and relies on the narrow width approximation, ignoring PDFs effects. 
+is sufficient for a limited range of coupling values (see Fig.~\ref{fig:xsec_scaling} for example), 
+this scaling is only approximate (up to 20\%)  and relies on the narrow width approximation, ignoring PDFs effects. 
 We also choose to provide instead a table of cross section times branching ratio values over a large range of couplings to support interpretation of search results (see the Appendix~\ref{app:TTBar_Xsecs}). The table lists couplings from $g=0.1$ to $g=3.5$, where the upper limit is chosen to be close to but lower than the perturbative limit. 
 
 \begin{figure}[!ht]
