--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1447,3 +1447,21 @@
 	reportNumber   = "LPT-ORSAY-12-42",
 	SLACcitation   = "%%CITATION = ARXIV:1205.3169;%%",
 }
+
+
+@article{Degrande:2011ua,
+      author         = "Degrande, Celine and Duhr, Claude and Fuks, Benjamin and
+                        Grellscheid, David and Mattelaer, Olivier and others",
+      title          = "{UFO - The Universal FeynRules Output}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "183",
+      pages          = "1201-1214",
+      doi            = "10.1016/j.cpc.2012.01.022",
+      year           = "2012",
+      eprint         = "1108.2040",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CP3-11-25, IPHC-PHENO-11-04, IPPP-11-39, DCPT-11-78,
+                        MPP-2011-68",
+      SLACcitation   = "%%CITATION = ARXIV:1108.2040;%%",
+}
