Make all MadGraph5_aMC@NLO uniform.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@227 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -67,7 +67,7 @@
 \newcommand{\lag}{{\cal L}} 
 \newcommand{\gmu}{\gamma^\mu}
 \newcommand{\feynrules}{{\namecaps{FeynRules}}\xspace}
-\newcommand{\madgraph}{{\namecaps{MadGraph}}\xspace}
+\newcommand{\madgraph}{{\textsc{MadGraph5\_aMC@NLO}}\xspace}
 \newcommand{\madevent}{{\namecaps{MadEvent}}\xspace}
 \newcommand{\madgraphFiveaMCNLO}{\texttt{MadGraph5\_aMC@NLO}\xspace}
 \newcommand{\madanalysis}{{\namecaps{MadAnalysis}}\xspace}
