--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -182,7 +182,7 @@ vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:scalarXS}
 \subsection{Higgs+MET signal from 2HDM model with a \Zprime and a new pseudoscalar}
 \label{subsec:Simulation}
 
-The leading order cross-sections from the Madgraph generator for the signal samples are listed in Tables~\ref{tab:SigSamplesZpA0}, ~ \ref{tab:SigSamplesZpDM}, ~ \ref{tab:SigSamplesZpZh}, for the various scan points recommended.  
+The leading order cross-sections from the \madgraph generator for the signal samples are listed in Tables~\ref{tab:SigSamplesZpA0}, ~ \ref{tab:SigSamplesZpDM}, ~ \ref{tab:SigSamplesZpZh}, for the various scan points recommended.  
 
 \begin{table}
 	\centering
