--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -81,7 +81,7 @@ but reduce to effective dimension 5 once the Higgs vacuum expectation values,
 contained in the W and Z mass terms, are inserted.  
 As such, one expects  these that operators would naturally arise in UV complete models where Dark Matter 
 interacts via a Higgs portal where heavy mediators would couple to the Higgs or other fields in an extended Higgs sector. 
-In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings~\ref{Djouadi:2012zc}.
+In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings~\cite{Djouadi:2012zc}.
 
 Concentrating  for the moment on mono-gauge boson signals, the above operator induces signatures with 
 \MET in conjunction with Z and W bosons at tree level,
@@ -114,7 +114,7 @@ The two parameters of this model are the scale of new physics $\lambda$
 and the DM particle mass. SM-DM coupling and new physics scale are related by 
 $\gDM = {(246~\gev)}/{\lambda}$. 
 \Todo{Clarify the reason why this happens 
-	in Madgraph through explicit Lagrangian terms?}.
+	in \madgraph through explicit Lagrangian terms?}.
 
 The initial value of the new physics scale $\lambda$ chosen 
 for the sample generation is 3~\tev; this is a convention and does not affect the signal kinematics;
