--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -584,7 +584,7 @@ $\lambda$ is the K\"{a}llen triangle function\sidenote{\vskip -2.5\baselineskip\
 
  To study the signal production and kinematic dependencies on these parameters, 
  we produced signal samples varying each of the five parameters through 
- MadGraph for the matrix element, PYTHIA for the parton shower, and DELPHES\cite{deFavereau:2013fsa} 
+ \madgraph for the matrix element, PYTHIA for the parton shower, and DELPHES\cite{deFavereau:2013fsa} 
 for a parameterized detector-level simulation.
  
  As seen in Fig.~\ref{fig:DMH_tanbeta}, variations of $\tan{\beta}$ does not lead to any kinematic 
