--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -210,7 +210,7 @@ The parameter scan for the $t-$ channel model is still under discussion.~\Todo{T
 %\subsection{Model implementation}
 %
 %These models are generated at leading
-%order with MadGraph 2.2.2, using Pythia8 for the parton shower.
+%order with \madgraph 2.2.2, using Pythia8 for the parton shower.
 %Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
 %\Todo{Add models and instructions for other final states}.
 
