--- a/doc/tex/Presentation_Of_Experimental_Results.tex
+++ b/doc/tex/Presentation_Of_Experimental_Results.tex
@@ -34,7 +34,7 @@ This section lists information necessary in order to reimplement an analysis. An
 	\item Process Generation: Details of the generated process, detailing number of additional partons generated. 
 	\item Availability of the LHE files: selected LHE files (detailing at least a few events if not the entire file) corresponding to the benchmarks listed in the analysis should be made available in order to cross check process generation. Experimental collaborations may generate events on-the-fly without saving the intermediate LHE file; we advocate that the cross-check of process generation is straight-forward if this information is present, so we encourage the generation of a few selected benchmark points allowing for a LHE file to be saved. For models concerning SUSY, corresponding SLHA files of benchmark files should also be details. Special attention should be paid to list the parameters which change the production cross section or kinematics of the process e.g. mixing angles. 
 	\item Process cards: Process cards includes PDF choices, details of matching algorithms and scales and details of process generation. If process cards are not available, above items should be clearly identified. 
-	\item MadGraph model files: For models which are not already implemented in MadGraph, availability of the corresponding model files is highly desired. It details the exact notation used in the model and hence sets up a complete framework. In case MadGraph is not used, enough information should be provided in order to clearly identify the underlying model used for interpretations. 
+	\item model files: For models which are not already implemented in \madgraph, availability of the corresponding model files in UFO format~\cite{Degrande:2011ua} is highly desired. It details the exact notation used in the model and hence sets up a complete framework. In case \madgraph is not used, enough information should be provided in order to clearly identify the underlying model used for interpretations. 
 \end{itemize}
 
 \item \textbf{Limit setting}: Detailed description of the likelihood used in order to derive the limits should be given, this can contain statistical procedure within the analysis text itself, however direct availability of the limit setting code as a workspace in RooStats or HistFitter~\cite{Baak:2014wma} is highly desirable. 
