--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -26,7 +26,7 @@ f_\phi(\tau) & = & \left\{\begin{array}{cc} \tau\left(1+(1-\tau)\left[\arcsin\tf
 f_a(\tau) & = & \left\{\begin{array}{cc} \tau\left[\arcsin\tfrac{1}{\sqrt{\tau}}\right]^{2},  & \tau < 1, \\  \tau\left(-\tfrac{1}{4}\right)\left[ \ln\left(\tfrac{1+\sqrt{1-\tau}}{1-\sqrt{1-\tau}} \right) - i \pi \right]^2, & \tau > 1.\end{array} \right.
 \end{eqnarray}
 
-{\it It is important to remember the values of the loop-induced couplings shown here are correct only in the limit of on-shell external gauge bosons, and where the internal momenta in the loops are small compared to the top mass. They should not be used in Monte Carlo even-generation with gluon jets that have large $p_T$ when compared to $m_t$, or when the mediators themselves have high $p_T$.} The tree-level couplings of scalar and pseudoscalar mediators to quarks can be used in event-generation through programs like {\tt MadGraph5} as with any other new physics model, and model files are available for these purposes. Correct event generation of scalars/pseudoscalar mediators being produced primarily through the gluon couplings must use more specialized event generation routines, capable of resolving the loop. Such codes include {\tt MCFM} and {\tt Sherpa}, but are not as yet ready for out-of-the-box use in the same manner as {\tt MadGraph}.
+{\it It is important to remember the values of the loop-induced couplings shown here are correct only in the limit of on-shell external gauge bosons, and where the internal momenta in the loops are small compared to the top mass. They should not be used in Monte Carlo even-generation with gluon jets that have large $p_T$ when compared to $m_t$, or when the mediators themselves have high $p_T$.} The tree-level couplings of scalar and pseudoscalar mediators to quarks can be used in event-generation through programs like \madgraph as with any other new physics model, and model files are available for these purposes. Correct event generation of scalars/pseudoscalar mediators being produced primarily through the gluon couplings must use more specialized event generation routines, capable of resolving the loop. Such codes include {\tt MCFM} and {\tt Sherpa}, but are not as yet ready for out-of-the-box use in the same manner as \madgraph.
 
 These Simplified Models have four free parameters: the universal coupling $g_v$, the dark coupling $g_\chiDM$, the dark matter mass $\mDM$, and the mediator mass $m_{\phi}$ or $m_a$. From this, all phenomenology can be calculated. However, one of the critical derived quantities, the mediator width, deserves special discussion. Under the minimal model, the widths for the mediators are given by:
 \begin{eqnarray}
