--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -426,7 +426,7 @@ Since they only show kinematic quantities related to $V$, these figures are rele
 	\caption{
 		Distribution of $V$ invariant mass for the $gu\to tV(\to t\bar{u})$ (on-shell V) 
 		for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
-		visible decay width (computed from Madgraph directly according to the allowed decays and their couplings, $1\%$ and $10\%$).
+		visible decay width (computed from \madgraph directly according to the allowed decays and their couplings, $1\%$ and $10\%$).
 	}   
 	\label{fig:appB:Vmass}
 \end{figure}
@@ -437,7 +437,7 @@ Since they only show kinematic quantities related to $V$, these figures are rele
 	\includegraphics[width=1.0\textwidth]{figures/singletop/Vmets_pt}
 	\caption{
 		Distribution of the $V$ $p_T$ for the $gu\to tV(\to t\bar{u})$ (on-shell V) for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
-		visible decay width (computed from Madgraph directly, $1\%$ and $10\%$).
+		visible decay width (computed from \madgraph directly, $1\%$ and $10\%$).
 	}
 	\label{fig:appB:pTV}
 \end{figure}
@@ -448,7 +448,7 @@ Since they only show kinematic quantities related to $V$, these figures are rele
 %	\includegraphics[width=1.0\textwidth]{figures/singletop/other_top_pt}
 %	\caption{
 %		Distribution of the top quark $p_T$ produced in association with $V$ in $gu\to tV$ for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
-%		visible decay width (computed from Madgraph directly, $1\%$ and $10\%$).
+%		visible decay width (computed from \madgraph directly, $1\%$ and $10\%$).
 %	}
 %	\label{fig:appB:pTtop}
 %\end{figure}
@@ -463,7 +463,7 @@ following the same path as for other models described in this document.
 %
 %\textbf{[Open point: update with new numbers]}
 %
-%ATLAS has considered two models, a resonant and a non-resonant production, using only right-handed top quarks in the lepton+jets final state. The signal samples were produced with {\sc Madgraph5} v1.5.11 interfaced with {\sc Pythia} 8.175, using the MSTW2008LO Parton Distribution Function (PDF) set (lhapdf ID: 21000).
+%ATLAS has considered two models, a resonant and a non-resonant production, using only right-handed top quarks in the lepton+jets final state. The signal samples were produced with \madgraph v1.5.11 interfaced with {\sc Pythia} 8.175, using the MSTW2008LO Parton Distribution Function (PDF) set (lhapdf ID: 21000).
 %The mass of the top quark was set at 172.5 GeV. Dynamic renormalisation and factorisation scales were used.
 %The $\met$ particle mass was varied, and in the case of the resonant model the resonance mass was fixed at 500~GeV:
 %\begin{itemize}
@@ -562,7 +562,7 @@ following the same path as for other models described in this document.
 %\textbf{[Open point: systematic uncertainties]}
 % \com{Question for DM forum:
 % \begin{itemize}
-%  \item Do we want to give more details about the Madgraph implementation, the couplings value in the param\_card, etc ... ?
+%  \item Do we want to give more details about the \madgraph implementation, the couplings value in the param\_card, etc ... ?
 %  \item I am not aware of any work on systematic variation due to scale, PDF choice, showering (Maybe some was done in the monotop analysis?). Then I am not completely what to put here.
 % \end{itemize}
 % }
