--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -349,7 +349,7 @@ Ref.~\cite{Papucci:2014iwa}, except in the heavy mediator limit ($\Mphi \approx 
 
 \newthought{Implementation}
 
-The MadGraph implementation of the Ref.~\cite{Papucci:2014iwa} is
+The \madgraph implementation of the Ref.~\cite{Papucci:2014iwa} is
 available from the Forum repository~\cite{ForumSVN_TChannel}, following the
 matching and merging prescription described in its Section II and
 Appendix A.
