--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -5,7 +5,7 @@
 
 {\bf [Comment on proper PDF sets to use, concerns about sea quark PDF in b-initiated diagrams (perhaps the latter belongs in the b-flavored DM section]}
 
-\section{powheg}
+\section{Powheg}
 
 A comprehensive and careful assessment of theoretical uncertainties
 plays a much more important role for the background estimations
@@ -103,6 +103,6 @@ useful keywords to group together different weights are
 More detailed information can be obtained by inspecting the document in 
 {\namecaps /Docs/V2-paper.pdf} under the common {\namecaps POWHEG-BOX-V2} directory. 
 
-\section{madgraph}
+\section{\madgraph}
 
 
