Added Andy's plots, clean up doc.tex comments before adding merging with new ifs
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@228 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -250,29 +250,29 @@ Todo{When we have the cross-sections for both, we can recommend the one with the
 %\end{figure}
 
 The differences in kinematics for the various signatures
-are negligible when changing the coefficients $c_1$ and $c_2$, as shown
-in Figure~\ref{fig:EFTD7_EW_kinematics}. Only the case $c_1=c_2=1$ is generated as benchmark;
-other cases are left for reinterpretation as they will only need a rescaling of the cross-sections
-shown in Appendix~\ref{app:EWSpecificModels_Appendix} for the various DM
-mass points considered.
+are negligible when changing the coefficients $c_1$ and $c_2$, 
+since these coefficient factorize in the matrix element. 
+Only the case $c_1=c_2=1$ is generated as benchmark;
+other cases are left for reinterpretation as they will only need a 
+rescaling of the cross-sections. 
+\Todo{Appendix~\ref{app:EWSpecificModels_Appendix} contains cross-sections
+	for these operators, for values }
+%for the various DM
+%mass points considered.
 
-\begin{figure}[h!]
-  \centering
-%  \subfloat[Missing transverse momentum distribution for the photon+\MET final state.\label{fig:EFTD7_EW_gamma_MET}]{%
-%      \includegraphics[width=0.45\textwidth]{figures/gull}
-%    }
-%    \hfill
-  \subfloat[Missing transverse momentum distribution.\label{fig:EFTD7_EW_Z_MET}]{%
-  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/metPt}
-  }
-  \hfill
-  \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
-  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/accS}
-  }
-    \caption{\MET distribution and acceptance for the dimension-7 model with a hadronically decaying Z in the final state,
-    for the scalar and pseudoscalar operators representing direct interactions between DM and bosons.}
-    \label{fig:EFTD7_EW_kinematics}
-\end{figure}
+%\begin{figure}[h!]
+%  \centering
+%  \subfloat[Missing transverse momentum distribution.\label{fig:EFTD7_EW_Z_MET}]{%
+%  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/metPt}
+%  }
+%  \hfill
+%  \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
+%  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newPlot}
+%  }
+%    \caption{\MET distribution and acceptance for the dimension-7 model with a hadronically decaying Z in the final state,
+%    for the scalar and pseudoscalar operators representing direct interactions between DM and bosons.}
+%    \label{fig:EFTD7_EW_kinematics}
+%\end{figure}
 
 
 %%%%%%%%%%%%%Dimension 8 operators
@@ -352,8 +352,6 @@ to the dimension 8 operator.
 It is important to remember that the operators described in 
 this section may present problems in terms of the validity of the contact interaction
 approach for the energy scales reached at the LHC. 
-
-\todo{Include comment about UV completion of EFT Dim 7 with loops. Uli is working on this.}
 
 As outlined in~\cite{Berlin:2014cfa}, designing very high \MET search signal regions
 that are exclusively motivated by the hard \MET spectra of the dimension 7 and 8 operators
